<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WashContactActivity"
    android:background="#ffffff"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:padding="8dp"
                android:contentDescription="@string/sss"
                android:src="@drawable/baseline_logout_24"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/contact_details"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="35sp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/qwertyuiop"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/sss"
                android:src="@drawable/one"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodeHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="5dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true" />

        <LinearLayout
            android:id="@+id/linearLayout17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/baseline_local_phone_24"
                    android:contentDescription="@string/sderfd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/mobile_number"
                    android:textSize="17sp"
                    tools:ignore="TextContrastCheck"
                    style="@style/Text"/>

            </LinearLayout>

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/border"
                android:drawablePadding="8dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/_1234567890"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/black"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize"
                style="@style/EditTextStyle"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/linerLayout17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/baseline_email_24"
                    android:contentDescription="@string/dfg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Email ID *"
                    android:textSize="17sp"
                    tools:ignore="TextContrastCheck"
                    style="@style/Text"/>

            </LinearLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/border"
                android:drawablePadding="8dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/johndoe_gmail_com"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                tools:ignore="TextFields,VisualLintTextFieldSize"
                android:autofillHints=""
                style="@style/EditTextStyle"/>


        </LinearLayout>
        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:background="@drawable/custom_btn"
            android:text="@string/verify"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="15sp"
            app:backgroundTint="@null"
            tools:ignore="VisualLintButtonSize"
            style="@style/btnText"/>
    </LinearLayout>



</ScrollView>